--- a/Risk_Parity_Simulations/Risk_Parity_ac_low_2017_2020.ipynb
+++ b/Risk_Parity_Simulations/Risk_Parity_ac_low_2017_2020.ipynb
@@ -6,13 +6,8 @@
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {
     "ExecuteTime": {
-<<<<<<< HEAD
      "end_time": "2025-01-18T13:18:25.473329Z",
      "start_time": "2025-01-18T13:18:24.693744Z"
-=======
-     "end_time": "2025-01-18T17:48:38.576966Z",
-     "start_time": "2025-01-18T17:48:37.855388Z"
->>>>>>> ac1dcf75bf05b9b319347ce8efdc9195669e09f5
     }
    },
    "outputs": [],
@@ -31,13 +26,8 @@
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {
     "ExecuteTime": {
-<<<<<<< HEAD
      "end_time": "2025-01-18T13:18:28.690155Z",
      "start_time": "2025-01-18T13:18:25.478114Z"
-=======
-     "end_time": "2025-01-18T17:48:41.676494Z",
-     "start_time": "2025-01-18T17:48:38.580761Z"
->>>>>>> ac1dcf75bf05b9b319347ce8efdc9195669e09f5
     }
    },
    "outputs": [],
@@ -59,13 +49,8 @@
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {
     "ExecuteTime": {
-<<<<<<< HEAD
      "end_time": "2025-01-18T13:18:28.842972Z",
      "start_time": "2025-01-18T13:18:28.799277Z"
-=======
-     "end_time": "2025-01-18T17:48:41.819381Z",
-     "start_time": "2025-01-18T17:48:41.769896Z"
->>>>>>> ac1dcf75bf05b9b319347ce8efdc9195669e09f5
     }
    },
    "outputs": [],
@@ -93,13 +78,8 @@
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {
     "ExecuteTime": {
-<<<<<<< HEAD
      "end_time": "2025-01-18T13:18:28.856368Z",
      "start_time": "2025-01-18T13:18:28.850295Z"
-=======
-     "end_time": "2025-01-18T17:48:41.833727Z",
-     "start_time": "2025-01-18T17:48:41.827152Z"
->>>>>>> ac1dcf75bf05b9b319347ce8efdc9195669e09f5
     }
    },
    "outputs": [
@@ -214,13 +194,8 @@
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {
     "ExecuteTime": {
-<<<<<<< HEAD
      "end_time": "2025-01-18T13:18:28.899178Z",
      "start_time": "2025-01-18T13:18:28.887092Z"
-=======
-     "end_time": "2025-01-18T17:48:41.877266Z",
-     "start_time": "2025-01-18T17:48:41.865535Z"
->>>>>>> ac1dcf75bf05b9b319347ce8efdc9195669e09f5
     }
    },
    "outputs": [],
@@ -251,13 +226,8 @@
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {
     "ExecuteTime": {
-<<<<<<< HEAD
      "end_time": "2025-01-18T13:18:28.949954Z",
      "start_time": "2025-01-18T13:18:28.943275Z"
-=======
-     "end_time": "2025-01-18T17:48:41.955049Z",
-     "start_time": "2025-01-18T17:48:41.945288Z"
->>>>>>> ac1dcf75bf05b9b319347ce8efdc9195669e09f5
     }
    },
    "outputs": [
@@ -392,10 +362,9 @@
     "returns = returns.drop(['Japan', 'T-Bills_7_10', 'T-Bills_20', \n",
     "                'APACxJapan','Europe','LatAm', 'US'], axis=1)\n",
     "\n",
-    "start = '2017-06-30'\n",
-    "end = '2020-01-31' \n",
-    "\n",
-    "returns = returns[start:end]\n",
+    "start_date = '2017-06-30'\n",
+    "end_date = '2020-01-31'\n",
+    "returns = returns[start_date:end_date]\n",
     "returns"
    ]
   },
@@ -405,13 +374,8 @@
    "id": "33d114c3-1e77-4838-a861-bb4470c412a4",
    "metadata": {
     "ExecuteTime": {
-<<<<<<< HEAD
      "end_time": "2025-01-18T13:18:30.099501Z",
      "start_time": "2025-01-18T13:18:29.000154Z"
-=======
-     "end_time": "2025-01-18T17:48:42.588322Z",
-     "start_time": "2025-01-18T17:48:41.998369Z"
->>>>>>> ac1dcf75bf05b9b319347ce8efdc9195669e09f5
     }
    },
    "outputs": [
@@ -599,20 +563,6 @@
      ]
     }
    ],
-<<<<<<< HEAD
-=======
-   "execution_count": 7
-  },
-  {
-   "cell_type": "code",
-   "id": "4d921794-764c-4cd4-a7bf-d8d130fb2e38",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-18T17:48:42.621353Z",
-     "start_time": "2025-01-18T17:48:42.615462Z"
-    }
-   },
->>>>>>> ac1dcf75bf05b9b319347ce8efdc9195669e09f5
    "source": [
     "#### Min Var Portfolio Analytics #### ver 2.2\n",
     "\n",
@@ -659,13 +609,8 @@
    "id": "278bc0b1-430c-4acd-89f5-b548a8c1efc1",
    "metadata": {
     "ExecuteTime": {
-<<<<<<< HEAD
      "end_time": "2025-01-18T13:18:30.168432Z",
      "start_time": "2025-01-18T13:18:30.166913Z"
-=======
-     "end_time": "2025-01-18T17:48:42.630232Z",
-     "start_time": "2025-01-18T17:48:42.628902Z"
->>>>>>> ac1dcf75bf05b9b319347ce8efdc9195669e09f5
     }
    },
    "outputs": [],
