MG upgraded risk parity to include transaction cost and individual asset compounding

--- a/z_old_Risk_Parity_asset_class_level.ipynb
+++ b/z_old_Risk_Parity_asset_class_level.ipynb
@@ -5,8 +5,8 @@
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T14:46:04.367113Z",
-     "start_time": "2025-01-23T14:46:04.355055Z"
+     "end_time": "2025-02-17T01:38:05.865026Z",
+     "start_time": "2025-02-17T01:38:05.157872Z"
     }
    },
    "source": [
@@ -18,15 +18,15 @@
     "from scipy.optimize import minimize"
    ],
    "outputs": [],
-   "execution_count": 87
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T14:46:07.396375Z",
-     "start_time": "2025-01-23T14:46:04.373929Z"
+     "end_time": "2025-02-17T01:38:09.018873Z",
+     "start_time": "2025-02-17T01:38:05.875688Z"
     }
    },
    "source": [
@@ -41,15 +41,15 @@
     "gold = pd.read_excel(\"./data/Price History_IAU_Gold_Trust.xlsx\")"
    ],
    "outputs": [],
-   "execution_count": 88
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T14:46:07.460748Z",
-     "start_time": "2025-01-23T14:46:07.416216Z"
+     "end_time": "2025-02-17T01:38:09.176041Z",
+     "start_time": "2025-02-17T01:38:09.131077Z"
     }
    },
    "source": [
@@ -70,15 +70,15 @@
     "gold = preprocess_and_rename(gold, 'Gold')"
    ],
    "outputs": [],
-   "execution_count": 89
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T14:46:07.480850Z",
-     "start_time": "2025-01-23T14:46:07.475176Z"
+     "end_time": "2025-02-17T01:38:09.196766Z",
+     "start_time": "2025-02-17T01:38:09.191406Z"
     }
    },
    "source": [
@@ -181,20 +181,20 @@
        "</div>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 90
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T14:46:07.535423Z",
-     "start_time": "2025-01-23T14:46:07.523119Z"
+     "end_time": "2025-02-17T01:38:09.244478Z",
+     "start_time": "2025-02-17T01:38:09.233939Z"
     }
    },
    "source": [
@@ -218,15 +218,15 @@
     "returns[\"Gold\"] = returns[\"Gold\"]"
    ],
    "outputs": [],
-   "execution_count": 91
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T14:46:07.598095Z",
-     "start_time": "2025-01-23T14:46:07.590059Z"
+     "end_time": "2025-02-17T01:38:09.289060Z",
+     "start_time": "2025-02-17T01:38:09.282319Z"
     }
    },
    "source": [
@@ -362,24 +362,24 @@
        "</div>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 92
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "id": "33d114c3-1e77-4838-a861-bb4470c412a4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T14:46:08.673210Z",
-     "start_time": "2025-01-23T14:46:07.645283Z"
+     "end_time": "2025-02-17T01:38:10.421998Z",
+     "start_time": "2025-02-17T01:38:09.346802Z"
     }
    },
    "source": [
-    "#### Min Var Portfolio Construction #### ver 2.2\n",
+    "#### Risk Parity Portfolio Construction #### ver 2.2\n",
     "\n",
     "def calculate_portfolio_variance(weights, cov_matrix):\n",
     "    return np.dot(weights.T, np.dot(cov_matrix, weights))\n",
@@ -551,15 +551,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 93
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "id": "4d921794-764c-4cd4-a7bf-d8d130fb2e38",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T14:46:08.709353Z",
-     "start_time": "2025-01-23T14:46:08.701620Z"
+     "end_time": "2025-02-17T01:38:10.462340Z",
+     "start_time": "2025-02-17T01:38:10.449132Z"
     }
    },
    "source": [
@@ -616,15 +616,15 @@
      ]
     }
    ],
-   "execution_count": 94
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "278bc0b1-430c-4acd-89f5-b548a8c1efc1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-23T14:46:08.734566Z",
-     "start_time": "2025-01-23T14:46:08.733167Z"
+     "end_time": "2025-02-17T01:38:10.485878Z",
+     "start_time": "2025-02-17T01:38:10.484072Z"
     }
    },
    "source": [],
