--- a/1_over_N.ipynb
+++ b/1_over_N.ipynb
@@ -615,7 +615,8 @@
     "print(f\"Sharpe Ratio: {sharpe:.2f}\")\n",
     "print(f\"Monthly 99% Value at Risk (VaR): {var_99:.4f}\")\n",
     "print(f\"Average Annual Portfolio Turnover: {avg_annual_turnover * 100:.2f}%\")\n",
-    "print(f\"Total transaction cost over entire period: ${total_tx_cost:,.2f}\")\n"
+    "print(f\"Total transaction cost over entire period: ${total_tx_cost:,.2f}\")\n",
+    "#hallo"
    ],
    "outputs": [
     {
