MG did final checks

--- a/Max_Sharpe.ipynb
+++ b/Max_Sharpe.ipynb
@@ -519,6 +519,7 @@
     "# Max Diversification Portfolio Construction with Individual Asset Compounding\n",
     "def max_sharpe_construction(returns, rebalance_frequency):\n",
     "    assets = ['Japan', 'T-Bills_7_10', 'T-Bills_20', 'APACxJapan', 'Europe', 'LatAm', 'US', 'Gold']\n",
+    "    returns = returns[assets]\n",
     "    n_assets = len(assets)\n",
     "    w0 = np.array([1/15, 1/6, 1/6, 1/15, 1/15, 1/15, 1/15, 1/3])\n",
     "\n",
