--- a/Min_Var.ipynb
+++ b/Min_Var.ipynb
@@ -5,8 +5,8 @@
    "id": "5008acbd-b508-454c-abaf-202ca736cdfb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:20.220154Z",
-     "start_time": "2025-02-25T13:03:20.199243Z"
+     "end_time": "2025-02-25T17:21:08.370178Z",
+     "start_time": "2025-02-25T17:21:08.322462Z"
     }
    },
    "source": [
@@ -18,15 +18,15 @@
     "from scipy.optimize import minimize"
    ],
    "outputs": [],
-   "execution_count": 341
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "id": "63589605-a9c7-428d-ba9d-93479a29fc26",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:23.378668Z",
-     "start_time": "2025-02-25T13:03:20.227375Z"
+     "end_time": "2025-02-25T17:21:11.496495Z",
+     "start_time": "2025-02-25T17:21:08.374386Z"
     }
    },
    "source": [
@@ -41,15 +41,15 @@
     "gold = pd.read_excel(\"./data/Price History_IAU_Gold_Trust.xlsx\")"
    ],
    "outputs": [],
-   "execution_count": 342
+   "execution_count": 12
   },
   {
    "cell_type": "code",
    "id": "18c1bd0b-4047-4479-8160-6417b48059a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:23.461623Z",
-     "start_time": "2025-02-25T13:03:23.411060Z"
+     "end_time": "2025-02-25T17:21:11.610442Z",
+     "start_time": "2025-02-25T17:21:11.522589Z"
     }
    },
    "source": [
@@ -70,15 +70,15 @@
     "gold = preprocess_and_rename(gold, 'Gold')"
    ],
    "outputs": [],
-   "execution_count": 343
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "id": "4fde3178-c36f-4ae9-80ec-55f48bc3b94d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:23.477898Z",
-     "start_time": "2025-02-25T13:03:23.473798Z"
+     "end_time": "2025-02-25T17:21:11.628499Z",
+     "start_time": "2025-02-25T17:21:11.624077Z"
     }
    },
    "source": [
@@ -181,20 +181,20 @@
        "</div>"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 344
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "id": "07b4f753-3e99-4742-acba-032da04b3753",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:23.530163Z",
-     "start_time": "2025-02-25T13:03:23.513877Z"
+     "end_time": "2025-02-25T17:21:11.653805Z",
+     "start_time": "2025-02-25T17:21:11.641051Z"
     }
    },
    "source": [
@@ -208,15 +208,15 @@
     "returns = returns.sort_values(by='Exchange Date', ascending=True)"
    ],
    "outputs": [],
-   "execution_count": 345
+   "execution_count": 15
   },
   {
    "cell_type": "code",
    "id": "4fc35f43-59b1-44d8-9355-58f6384abbd4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:23.586380Z",
-     "start_time": "2025-02-25T13:03:23.578538Z"
+     "end_time": "2025-02-25T17:21:11.681513Z",
+     "start_time": "2025-02-25T17:21:11.675994Z"
     }
    },
    "source": [
@@ -424,20 +424,20 @@
        "</div>"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 346
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "id": "33d114c3-1e77-4838-a861-bb4470c412a4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:25.522656Z",
-     "start_time": "2025-02-25T13:03:23.634593Z"
+     "end_time": "2025-02-25T17:21:13.651366Z",
+     "start_time": "2025-02-25T17:21:11.735664Z"
     }
    },
    "source": [
@@ -472,6 +472,7 @@
     "def min_variance_construction(returns, rebalance_frequency):\n",
     "    # Define asset order and initial weights (grouping-based)\n",
     "    assets = ['Japan', 'T-Bills_7_10', 'T-Bills_20', 'APACxJapan', 'Europe', 'LatAm', 'US', 'Gold']\n",
+    "    returns = returns[assets]\n",
     "    n_assets = len(assets)\n",
     "    w0 = np.array([1/15, 1/6, 1/6, 1/15, 1/15, 1/15, 1/15, 1/3])\n",
     "\n",
@@ -618,15 +619,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 347
+   "execution_count": 17
   },
   {
    "cell_type": "code",
    "id": "4d921794-764c-4cd4-a7bf-d8d130fb2e38",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:25.555430Z",
-     "start_time": "2025-02-25T13:03:25.546172Z"
+     "end_time": "2025-02-25T17:21:13.690461Z",
+     "start_time": "2025-02-25T17:21:13.679628Z"
     }
    },
    "source": [
@@ -690,15 +691,15 @@
      ]
     }
    ],
-   "execution_count": 348
+   "execution_count": 18
   },
   {
    "cell_type": "code",
    "id": "7b7da597-5539-4c53-b303-b625b825f41c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:26.787666Z",
-     "start_time": "2025-02-25T13:03:25.572966Z"
+     "end_time": "2025-02-25T17:21:14.912425Z",
+     "start_time": "2025-02-25T17:21:13.708001Z"
     }
    },
    "source": [
@@ -854,15 +855,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 349
+   "execution_count": 19
   },
   {
    "cell_type": "code",
    "id": "73e19b84-462a-4168-b37c-d3e1fb313c10",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-25T13:03:26.819571Z",
-     "start_time": "2025-02-25T13:03:26.808138Z"
+     "end_time": "2025-02-25T17:21:14.933959Z",
+     "start_time": "2025-02-25T17:21:14.926661Z"
     }
    },
    "source": [
@@ -919,7 +920,7 @@
      ]
     }
    ],
-   "execution_count": 350
+   "execution_count": 20
   }
  ],
  "metadata": {
